Moved all of the test functions to the database component and wrote a few new ones. Made them all work with our current API. In addition, I added a get all button which pulls every table from our database and stores it into the variable that is equal to the plural form for the url. e.g. job database stored in jobs variable. Got rid of a lot of the cluttered code, left all of that example code in the create poll component those if someone wants to reference it still. Removed the createpoll component from being displayed in the main html file.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,11 +35,11 @@
 
 <div style="text-align:center" class="cntr">
 
-  <app-createpoll>
  
-  </app-createpoll>
 
-
+  <app-database>
+    
+     </app-database>
 
 </div>
 
