Added tables for the data to display. Updated all of the functions and display parameters to match the new API data types. Added a add and delete function that's only setup for employee right now but can be polymorphicly applied to others. Added a add button which gives you the option to add/delete then calls the appropriate function to do that request before updating the data immediately after in real time. Undid tab structure due to issues with overlay opacity when pressing the add button. Planning on adding manual tabs for the website and data to sift through to avoid this issue. Added more dependencies, injected them rather, into the appropriate components to ensure proper functionality.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <div class="pusher">
 
   <sm-menu title="DryTime" class="inverted" background="#34373c" logo="https://i.imgur.com/gia9AHp.png">
-    <a sm-item *ngFor="let item of items" [icon]="item.icon" onclick="employeeShow();">{{item?.title}}</a>
+    <a sm-item *ngFor="let item of items" [icon]="item.icon" onclick="this.DatabaseComponent.test();">{{item?.title}}</a>
 
     <sm-menu class="menu right secondary">
         <a sm-item href="#/elements/menu" 
